dist/1.0/bin/sample/retrieveUnpackaged/objects/Attribute_Set_Type__c.object
<CustomObject>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enumerator__c</fullName>
        <description>DAVO field - required in Billing; Identifies LOB class of attributeSetType</description>
        <inlineHelpText>Technical field for SK: required in Billing</inlineHelpText>
        <label>Line of Business</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Attribute Set Type</relationshipLabel>
        <relationshipName>Attribute_Set_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Location this Attribute Set Type is used for.</description>
        <inlineHelpText>GTS Location this Attribute Set Type is used for.</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Technical field for SK Billing</description>
        <inlineHelpText>Technical field for SK Billing</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Attribute Set Type is used for Simplified Order.</description>
        <inlineHelpText>Indicates if Attribute Set Type is used for Simplified Order.</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status indicating if Attribute Set Type has already been created in Billing system</description>
        <inlineHelpText>Status indicating if Attribute Set Type has already been created in Billing system</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Validity date from which this Attribute Set Type can be used.</description>
        <inlineHelpText>Validity date from which this Attribute Set Type can be used.</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Validity date to which this Attribute Set Type can be used.</description>
        <inlineHelpText>Validity date to which this Attribute Set Type can be used.</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Attribute Set Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enumerator__c</columns>
        <columns>Status__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Set Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Set Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>